fix: add extra margins to chat box main content

--- a/client/src/public/css/styles.css
+++ b/client/src/public/css/styles.css
@@ -614,6 +614,7 @@ code {
   align-items: flex-start;
   flex-direction: column;
   justify-content: flex-end;
+  margin-top: 2px;
   margin-bottom: 2px;
 }
 
@@ -642,6 +643,7 @@ code {
   height: 95%;
   overflow-x: hidden;
   width: 100%;
+  margin-top: 2px;
   margin-bottom: 2px;
 }
 
